[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Main/EditLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/Main.gd" type="Script" id=2]
[ext_resource path="res://src/QuestionnaireList/QuestionnaireList.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/QuestionnaireConfiguration/QuestionnaireConfiguration.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hbox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="PanelContainer" parent="Hbox"]
margin_right = 1024.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="Hbox/TopBar"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 29.0

[node name="EditLabel" parent="Hbox/TopBar/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 101.0
margin_bottom = 22.0
text = "New Study"

[node name="LoadButton" type="Button" parent="Hbox/TopBar/HBoxContainer"]
margin_left = 923.0
margin_right = 965.0
margin_bottom = 22.0
size_flags_horizontal = 10
text = "Load"

[node name="SaveButton" type="Button" parent="Hbox/TopBar/HBoxContainer"]
margin_left = 969.0
margin_right = 1010.0
margin_bottom = 22.0
text = "Save"

[node name="HSplitContainer" type="HSplitContainer" parent="Hbox"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuestionnaireList" parent="Hbox/HSplitContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 142.0
margin_bottom = 564.0

[node name="QuestionnaireConfiguration" parent="Hbox/HSplitContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 154.0
margin_right = 1024.0
margin_bottom = 564.0

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -305.0
margin_top = -170.0
margin_right = 305.0
margin_bottom = 170.0
window_title = "Save Study"
resizable = true
access = 2
current_dir = "/Users/selina.volsa/Documents/GitHub/TWatch-2020-ESM-Configuration-App/godot"
current_path = "/Users/selina.volsa/Documents/GitHub/TWatch-2020-ESM-Configuration-App/godot/"

[connection signal="text_changed" from="Hbox/TopBar/HBoxContainer/EditLabel" to="." method="_on_EditLabel_text_changed"]
[connection signal="pressed" from="Hbox/TopBar/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Hbox/TopBar/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="questionnaire_selected" from="Hbox/HSplitContainer/QuestionnaireList" to="." method="_on_QuestionnaireList_questionnaire_selected"]
[connection signal="delete_requested" from="Hbox/HSplitContainer/QuestionnaireConfiguration" to="." method="_on_QuestionnaireConfiguration_delete_requested"]
[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
